# job-radar

./: .dockerignore  .env.example  .gitignore  BUG_FIXES.md  DEPLOYMENT.md  Dockerfile  FILTER_RULES.md  FILTER_SUMMARY.txt  PROJECT_PLAN.md  README.md  docker-compose.yml  fly.toml  job-radar.service  job-radar.timer  pyproject.toml  test_smoke.py
config/: config.yaml  config.yaml.example  keywords.yaml  user_companies.yaml  user_companies.yaml.example
docs/: deployment.md  operations.md
scripts/: check_jobs.py
src/job_radar/: __init__.py  cli.py  config.py  database.py
src/job_radar/alerts/: __init__.py  dedup.py  discord.py  email.py  file_logger.py  formatter.py  imessage.py  manager.py  telegram.py
src/job_radar/matcher/: __init__.py  engine.py
src/job_radar/models/: __init__.py
src/job_radar/scheduler/: __init__.py  quiet_hours.py
src/job_radar/scrapers/: __init__.py  base.py
src/job_radar/scripts/: __init__.py  check_jobs.py
src/job_radar/storage/: __init__.py
