[project]
name = "job-radar"
version = "0.1.0"
description = "Automated job alert system for DA/DS/ML/AI roles at top AI companies"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Khushir", email = "khushir@example.com"}]
keywords = ["job-search", "automation", "ai-careers", "job-alerts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.19",
    
    # HTTP & Scraping
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "selectolax>=0.3",
    "trafilatura>=1.6",
    
    # Scheduling & Time
    "apscheduler>=3.10",
    "pytz>=2024.1",
    "python-dateutil>=2.9",
    
    # Alerts
    "python-telegram-bot>=21.0",
    "discord-webhook>=1.2",
    "aiosmtplib>=3.0",
    "aiofiles>=23.0",
    
    # CLI
    "typer>=0.12",
    "rich>=13.7",
    
    # Utilities
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "tenacity>=8.2",
    "rapidfuzz>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
playwright = ["playwright>=1.44"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "ARG", "PTH", "PL", "TRY", "SIM", "TID"]
ignore = ["S101", "ARG001", "ARG002", "PLW0602"]
fixable = ["F", "I", "N", "W", "UP", "B", "C4", "ARG", "PTH", "PL", "TRY", "SIM", "TID"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[project.scripts]
job-radar = "job_radar.cli:app"